--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     "license": "GPL-3.0",
     "require": {
         "php": ">=7.4"
+    },
+    "autoload": {
+        "files": [
+            "autoload.php"
+        ]
     }
 }
