--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "keywords": [
         "webtrees",
-        "webtree-module",
+        "webtrees-module",
 		"custom-module"
     ],
     "license": "GPL-3.0",
